<!--  https://support.google.com/googleplay/android-developer/table/4419860?hl=en
      https://developer.android.com/training/basics/supporting-devices/languages.html
      http://www.androidhive.info/2014/07/android-building-multi-language-supported-app/
-->

<resources>
    <string name="app_name">A keni ligjerata?</string>
    <string name="do_you_have_classes">A keni ligjerata?</string>
    <string name="find_me_a_room">Find me a room</string>
    <string name="take_me_to_fiek">Take me to FIEK</string>
    <string name="title_activity_maps">Map</string>
    <string name="Schedule_for_today_401">Schedule for today</string>
    <string name="post_401">Post</string>
    <string name="comments_401">Comments</string>
    <string name="your_comment_here_401">Your comment here</string>
    <string name="schedule_for_today_408">Schedule for today</string>
    <string name="post_408">Post</string>
    <string name="comments_408">Comments</string>
    <string name="your_comment_here_408">Your comment here</string>
    <string name="schedule_for_today_411">Schedule for today</string>
    <string name="post_411">Post</string>
    <string name="comments_411">Comments</string>
    <string name="your_comment_here_411">Your comment here</string>
    <string name="schedule_for_today_414">Schedule for today</string>
    <string name="post_414">Post</string>
    <string name="comments_414">Comments</string>
    <string name="your_comment_here_414">Your comment here</string>
    <string name="schedule_for_today_415">Schedule for today</string>
    <string name="post_415">Post</string>
    <string name="comments_415">Comments</string>
    <string name="your_comment_here_415">Your comment here</string>
    <string name="schedule_for_today_507">Schedule for today</string>
    <string name="post_507">Post</string>
    <string name="comments_507">Comments</string>
    <string name="your_comment_here_507">Your comment here</string>
    <string name="schedule_for_today_511">Schedule for today</string>
    <string name="post_511">Post</string>
    <string name="comments_511">Comments</string>
    <string name="your_comment_here_511">Your comment here</string>
    <string name="schedule_for_today_521">Schedule for today</string>
    <string name="post_521">Post</string>
    <string name="comments_521">Comments</string>
    <string name="your_comment_here_521">Your comment here</string>
    <string name="schedule_for_today_526">Schedule for today</string>
    <string name="post_526">Post</string>
    <string name="comments_526">Comments</string>
    <string name="your_comment_here_526">Your comment here</string>
    <string name="no_internet_info">We\'re sorry, but please connect to the internet so we can download the schedule for you!</string>
    <string name="photo_of_the_fourth_floor_areas">Photo of the fourth floor areas</string>
    <string name="photo_of_the_fourth_floor">Photo of the fourth floor</string>
    <string name="availability_area_of_one_of_the_rooms_in_4th_floor">Availability area of one of the rooms in 4th floor</string>
    <string name="plan_of_the_fifth_floor">Plan of the fifth floor</string>
    <string name="plan_of_the_areas_on_the_fifth_floor">Plan of the areas on the fifth floor</string>
    <string name="availability_area_on_the_fifth_floor">Availability area on the fifth floor</string>
    <string name="test_lightining">Test Lightining</string>
    <string name="test">TEST!</string>
    <string name="here_you_can_test_the_lightining_of_a_room_based_on_your_phones_lightsensor">Here you can test the lightining of a room based on your phones lightsensor.</string>
    <string name="bad_lightning">The lightning is really bad here!</string>
    <string name="ok_lightning">The lightning is OK in here!</string>
    <string name="good_lightning">The lightning is good in here!</string>
    <string name="verygood_lightning">The lightning is very good in here!</string>
    <string name="commented_on">"Commetend on: "</string>
</resources>
