<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customborder"
    tools:context="rks.fiek.akeniligjerata.mainActivity">

    <TextView
        android:text="@string/do_you_have_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_above="@+id/btnRoom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif"
        android:textColor="#FFFFFF"/>

    <Button
        android:text="@string/find_me_a_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRoom"
        android:layout_above="@+id/btnMap"
        android:layout_centerHorizontal="true"
        android:onClick="btnPlanOnClick"/>

    <Button
        android:text="@string/take_me_to_fiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="162dp"
        android:id="@+id/btnMap"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnRoom"
        android:onClick="btnMapOnClick"/>

    <Button
        android:id="@+id/btnTestLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test_light"
        android:layout_below="@+id/btnRoom"
        android:layout_marginTop="46dp"
        android:layout_alignStart="@+id/btnMap"
        android:layout_alignEnd="@+id/btnRoom"
        android:onClick="btnTestLight" />
</RelativeLayout>
