<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_class415"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rks.fiek.akeniligjerata.class415Activity">

    <rks.fiek.akeniligjerata.TouchImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imgvClassPhoto"
        android:src="@mipmap/class415"
        android:scaleType="centerCrop"/>

    <TextView
        android:text="@string/schedule_for_today_415"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/imgvClassPhoto"
        android:layout_alignParentStart="true"
        android:background="@drawable/textlines"
        android:textColor="#FFFFFF"/>

    <Button
        android:text="@string/post_415"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignTop="@+id/editText"
        android:onClick="btnAddOnClick" />

    <ListView
        android:id="@+id/list"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">
    </ListView>

    <TextView
        android:text="@string/comments_415"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/textlines"
        android:textColor="#FFFFFF"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:id="@+id/listComments"
        android:layout_height="90dp"
        android:layout_above="@+id/btnAdd">
    </ListView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/your_comment_here_415"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnAdd" />


</RelativeLayout>
